--- a/content/assets/css/project.css
+++ b/content/assets/css/project.css
@@ -1,8 +1,8 @@
 /*
- 
+
     Specific layout and styling, project based
-        
-    
+
+
 */
 /*
 Flexslider vs LayerSlider vs SliderRevolution
@@ -14,7 +14,7 @@ breadcrumb vs history what is a breadcrumb hiearchy or history?
 gray-color thingy
 
 widget-row vs thumbs vs joyo-thumbs
-shortcode for 
+shortcode for
 - Fontawesome
 - Accordion
 - Notifications
@@ -28,13 +28,13 @@ widget in sidebar vs in column = uiterlijk op basis van locale class via functio
 
 - SCAFFOLDING							Groundwork for the site. Background colors are set in less or overruled here
 - SCAFFOLDING OBJECTS					Objects reoccurring on every page
-- COMPONENTS							Everything what can be moved around				
+- COMPONENTS							Everything what can be moved around
 - BACK TO TOP							Anchor animating to top of the page
 - EXCEPTIONS FOR SPECIFIC SITUATIONS	Some pages are not like the others
-- D-I-D AREA							Do-It-Dirty 
+- D-I-D AREA							Do-It-Dirty
 
 */
-/* SCAFFOLDING STYLING 
+/* SCAFFOLDING STYLING
 ----------------------------------------------------------------------------------------*/
 html {
   background-color: ;
@@ -55,7 +55,7 @@ body {
   background-color: #f5f5f5;
 }
 #segment-header > .container {
-  background-color: #ffffff;
+  background-color: #e6e6e6;
 }
 #segment-footer {
   background-color: #707070;
@@ -81,7 +81,7 @@ body {
 		//padding-right: 0;
 		.segment > .container {
 			//padding-left: 10px;
-			//padding-right: 10px; 
+			//padding-right: 10px;
 		}
 	}
 	.segment {
@@ -105,66 +105,43 @@ body {
 }
 /* SCAFFOlDING OBJECTS
 ----------------------------------------------------------------------------------------*/
-#logo {
+.logo {
   float: left;
   margin-top: 6px;
   margin-left: 20px;
   margin-bottom: 4px;
-  display: block;
 }
-#logo img {
-  max-width: 100%;
-}
-#hl7-nav {
-  line-height: 50px;
-  float: left;
-  margin-top: 16px;
-  color: #808080;
-}
-#hl7-nav a {
-  color: inherit;
-}
-#hl7-logo {
-  float: left;
-  margin-left: 6px;
-}
+
 #project-nav {
   line-height: 50px;
-  float: left;
-  margin-top: 8px;
-  margin-bottom: 8px;
-  color: #808080;
-}
-#project-logo {
-  float: left;
-  margin-left: 3px;
-}
-#hl7-search {
-  line-height: 50px;
   float: right;
   margin-top: 16px;
-  color: maroon;
+  color: #808080;
 }
-#hl7-search a {
+#project-nav a {
   color: inherit;
 }
-#fhir-nav {
-  line-height: 50px;
-  float: right;
+.project-status {
   margin-top: 16px;
-  color: #808080;
-}
-#fhir-logo {
-  float: right;
-  margin-left: 6px;
-}
-#hl7-status {
-  line-height: 20px;
-  margin-top: 26px;
   color: maroon;
-  text-align: center;
-  height: 60px;
 }
+#project-search {
+  line-height: 50px;
+  float: left;
+  margin-top: 16px;
+  color: maroon;
+}
+#project-search a {
+  color: inherit;
+}
+.project-logo {
+  float: right;
+  margin-right: 20px;
+  margin-top: 6px;
+  margin-bottom: 4px;
+  height: 100px;
+}
+
 #stripe {
   position: absolute;
   left: 0;
@@ -175,11 +152,6 @@ body {
 }
 #notes a {
   color: #555555;
-}
-#publish-box {
-  background-color: yellow;
-  border: 1px solid maroon;
-  padding: 5px;
 }
 /* GENERIC OBJECTS
 ----------------------------------------------------------------------------------------*/
@@ -276,7 +248,7 @@ body {
         border-bottom: 0;
     }
     .nav-tabs > li > a {
-        border: 1px solid #ddd;        
+        border: 1px solid #ddd;
         .border-top-radius(0);
         .border-right-radius(0);
         .border-bottom-radius(0);
@@ -297,17 +269,26 @@ body {
         border-color: #ddd;
         z-index: 2;
     }
-}	
+}
 */
 .nav-list > li > a {
   padding: 3px 15px;
 }
 .breadcrumb {
   margin-bottom: 0;
+  padding: 0px 0px;
 }
 .breadcrumb a {
   color: #555555;
 }
+.breadcrumb .btn-link {
+  font-weight: bold;
+  border-color: white;
+  border-right-width: 5px;
+}
+
+
+
 .nav-listing {
   overflow: hidden;
 }
@@ -392,65 +373,250 @@ a.to-top {
 /* D-I-D AREA
 ----------------------------------------------------------------------------------------*/
 
-ul.markdown-toc
-{
-  margin: 4px;
-  padding: 4px;
-  float: right;
-  z-index: 10;
-  width: 150px;
-  background-color: #ffeb7e;
-  border: 1px solid navy;
+/* ----------TOC styling ------*/
+
+// Adding 'Contents' headline to the TOC
+#markdown-toc {
 }
 
-ul.markdown-toc p
-{
-  font-size: 10px;
-  font-weight: bold;
-  margin: 5px;
-  padding: 0px;
+#markdown-toc::before {
+  content: 'Contents:';
+  /*font-size: 1.5em;*/
 }
 
-ul.markdown-toc p.link
-{
-  font-size: 10px;
-  padding-left: 8px;
-  margin: 0px;
+
+ul#markdown-toc {
+  /* font-size: 0.8em; */
+  /* list-style: none; */
+    list-style-position: inside;
+    margin: 4px;
+    padding: 4px;
+    /*float: right;*/
+    z-index: 10;
+    width: 40%;
+    background-color: #f5f5f5;
+    border: 1px solid #f5f5f5;
+    border-radius: 5px;
 }
 
-div.markdown-toc
-{
-  margin: 4px;
-  padding: 4px;
-  float: right;
-  z-index: 10;
-  width: 150px;
-  background-color: #ffeb7e;
-  border: 1px solid navy;
+li#markdown-toc {
+/* font-size: 1.5em; */
 }
 
-div.markdown-toc p
-{
-  font-size: 10px;
-  font-weight: bold;
-  margin: 5px;
-  padding: 0px;
+/* Section numbering
+
+body{counter-reset: section}
+h2{counter-reset: sub-section}
+h3{counter-reset: composite}
+h4{counter-reset: detail}
+h5{counter-reset: more-detail}
+
+h2:not([nocount^="true"]):before{
+  counter-increment: section;
+  content:  counter(pagenumber) "." counter(section) " ";
+  color: silver;
+}
+h3:not([nocount^="true"]):before{
+  counter-increment: sub-section;
+  content: counter(pagenumber) "." counter(section) "." counter(sub-section) " ";
+  color: silver;
+}
+h4:not([nocount^="true"]):before{
+  counter-increment: composite;
+  content: counter(pagenumber) "." counter(section) "." counter(sub-section) "." counter(composite) " ";
+  color: silver;
+}
+h5:not([nocount^="true"]):before{
+  counter-increment: detail;
+  content: counter(pagenumber) "." counter(section) "." counter(sub-section) "." counter(composite) "." counter(detail) " ";
+  color: silver;
+}
+h6:not([nocount^="true"]):before{
+  counter-increment: more-detail;
+  content: var(--pagenumber) "." counter(section) "." counter(sub-section) "." counter(composite) "." counter(detail) "." counter(more-detail)" ";
+  color: silver;
 }
 
-div.markdown-toc p.link
-{
-  font-size: 10px;
-  padding-left: 8px;
-  margin: 0px;
+*/
+
+/* ----------Publish box styling------*/
+
+
+#publish-box {
+  list-style: none;
+  padding: 0;
 }
-/* Common content for section numbering */
-body{counter-reset:section}
-h2{counter-reset:sub-section}
-h3{counter-reset:composite}
-h4{counter-reset:detail}
-h5{counter-reset:more-detail}
-h2:before{color:silver;counter-increment:section;content:var(--heading-prefix) "." counter(section) " ";}
-h3:before{color:silver;counter-increment:sub-section;content:var(--heading-prefix) "." counter(section) "." counter(sub-section) " ";}
-h4:before{color:silver;counter-increment:composite;content:var(--heading-prefix) "." counter(section) "." counter(sub-section) "." counter(composite) " ";}
-h5:before{color:silver;counter-increment:detail;content:var(--heading-prefix) "." counter(section) "." counter(sub-section) "." counter(composite) "." counter(detail) " ";}
-h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefix) "." counter(section) "." counter(sub-section) "." counter(composite) "." counter(detail) "." counter(more-detail)" ";}
+
+p#publish-box {
+  background-color: yellow;
+  border:1px solid maroon;
+  padding: 5px;
+}
+
+img#publish-box {
+vertical-align: baseline;
+}
+
+#markdown-toc li{
+font-size: 1em;
+
+}
+
+/* ----- increase li font sized fhir.css makes it all 12 px---*/
+
+p, li {
+    font-size: 1em;
+}
+
+/*-----top of page arrow ----*/
+.back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 100px;
+    right: 20px;
+    display:none;
+    background-color: #999999;
+}
+
+.card-body {
+ border: 1px solid;
+ border-color: #cccccc;
+ padding: 10px
+}
+
+/*----pseudo json styling ----*/
+
+pre.spec {
+  font-size: 11px;
+  width: 650px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(255, 255, 255, 0.15);
+  border-image: initial;
+  background: rgba(255, 255, 255, 0.15);
+  padding: 5px;
+}
+
+/* this part adds an icon after external links, using external.png file  for p and li elements */
+
+p a[href^="http://"]:not([no-external^="true"]):after, a[href^="https://"]:not([no-external^="true"]):after {
+    content: url(../images/external.png);
+    display: inline-block;
+    text-decoration: none;
+    padding-left: 3px;
+}
+
+li a[href^="http://"]:not([no-external^="true"]):after, a[href^="https://"]:not([no-external^="true"]):after {
+    content: url(../images/external.png);
+    display: inline-block;
+    text-decoration: none;
+    padding-left: 3px;
+}
+
+
+/*--------- make all figures the same siz------e*/
+.figure-img{
+  height: 415px;
+  width: 740px;
+}
+
+.figure-img-narrow{
+  height: 181px;
+  width: 740px;
+}
+
+.figure-img-portrait{
+  width: 100%;
+}
+
+.figure-img-portrait-med{
+  height: 1040px;
+  width: 740%;
+}
+
+.figure-img-small{
+  height: 100px;
+  width: 350px;
+}
+/*--------- change example button color------*/
+
+.btn-example {
+  color: #000000;
+  background-color: #EFF3F6;
+  border-color: #8C88A3;
+}
+
+.btn-example:hover,
+.btn-example:focus,
+.btn-example:active,
+.btn-example.active,
+.open .dropdown-toggle.btn-example {
+  color: #000000;
+  background-color: #E3E6E8;
+  border-color: #8C88A3;
+}
+
+.btn-example:active,
+.btn-example.active,
+.open .dropdown-toggle.btn-example {
+  background-image: none;
+}
+
+.btn-example.disabled,
+.btn-example[disabled],
+fieldset[disabled] .btn-example,
+.btn-example.disabled:hover,
+.btn-example[disabled]:hover,
+fieldset[disabled] .btn-example:hover,
+.btn-example.disabled:focus,
+.btn-example[disabled]:focus,
+fieldset[disabled] .btn-example:focus,
+.btn-example.disabled:active,
+.btn-example[disabled]:active,
+fieldset[disabled] .btn-example:active,
+.btn-example.disabled.active,
+.btn-example[disabled].active,
+fieldset[disabled] .btn-example.active {
+  background-color: #EFF3F6;
+  border-color: #8C88A3;
+}
+
+.btn-example .badge {
+  color: #EFF3F6;
+  background-color: #000000;
+}
+
+/* ============ downloads css ============= */
+
+a[href$=".sch"]:after, a[href$=".zip"]:after, a[href$=".tgz"]:after, a[href$=".xml"]:after, a[href$=".json"]:after, a[href$=".csv"]:after, a[href$=".ttl"]:after {
+  content: url(../images/download.png);
+  display: inline-block;
+  text-decoration: none;
+  padding-left: 3px;
+}
+
+/* ----------note-to-balloters styling------
+
+/* ----------note-to-balloters styling------*/
+
+.note-to-balloters::before {
+  white-space: pre;
+  content: "Note To Balloters\A ";
+  #background-color: yellow;
+  color: red;
+  font-weight: bold;}
+.note-to-balloters, .stu-note{
+    margin: 5px;
+    padding: 10px;
+    border-left-style: solid;
+    background-color: #fff2ff;
+    border-left-color: #ffa0ff;
+}
+
+.stu-note::before {
+  white-space: pre;
+  content: "STU Note\A ";
+  #background-color: yellow;
+  color: red;
+  font-weight: bold;}
+~~~
